# Projeto_Advocacia

./: .env.example  .gitignore  BACKUP.md  CHANGELOG.md  CONTRIBUTING.md  CORRECAO_DOWNLOAD.md  INICIAR.md  PREPARAR_GITHUB.md  README.md  README_WEB.md  SOLUCAO_FETCH.md  build-icon.js  main.py  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml
advocacia-app/: README.md  requirements.txt  setup.cfg  setup.py
advocacia-app/installer/: AdvocaciaAppSetup.iss  README.md  build_installer.bat
advocacia-app/src/: main.py
docs/: README.md
public/: electron.js  index.html  preload.js
server/: .env.example  CORRECOES.md  README.md  SETUP_POSTGRES.md  package-lock.json  package.json  server.js
server/config/: database.js
server/middleware/: auth.js
server/migrations/: 001_initial_schema.sql  002_fix_sessoes_duplicadas.sql
server/routes/: admin.js  arquivos.js  auth.js  sessoes.js
server/scripts/: setup-database.js
server/scripts/migrations/: fix-sessoes.js  limpar-sessoes-duplicadas-usuarios.js  limpar-sessoes-duplicadas.js
server/scripts/utils/: criar-sessoes-globais.js  (+1 more)
src/: App.js  AppWeb.js  index.css  index.js
src/components/: AdminPanel.js  AdvancedFilters.js  ConfirmModal.js  EditFileModal.js  ErrorBoundary.js  FileViewer.js  FilterModal.js  LoadingSkeleton.js  Login.js  MultiUploadModal.js  Pagination.js  ProtectedRoute.js  RecentTab.js  SearchTab.js  SessionsModal.js  SortControls.js  UnifiedUploadModal.js  UploadModal.js
src/hooks/: useDebounce.js  useTheme.js
src/services/: api.js
src/utils/: toast.js
