[metadata]
name = advocacia-app
version = 0.1.0
description = A Tkinter-based GUI for managing legal documents.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/advocacia-app
license = MIT

[options]
packages = find:
install_requires =
    tkinter
    sqlite3

[options.packages.find]
where = src

[options.entry_points]
gui_scripts =
    advocacia-app = main:main_function  # Replace 'main_function' with the actual function to run the app if needed.